clusters/develop/workloads/frontend/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nexora-frontend
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.develop.nxua.dev`) && PathPrefix(`/`)
      kind: Rule
      priority: 1
      middlewares:
        - name: secure-headers
      services:
        - name: nexora-frontend
          port: 80
  tls:
    secretName: nexora-frontend-tls
